bug: navbar alignment correction

--- a/style.css
+++ b/style.css
@@ -7,19 +7,15 @@ body {
   color: white;
 }
 
-#navbarSupportedContent {
-  display: flex;
-  justify-content: center;
-}
-
 .navbar {
   background-color: rgb(34, 32, 32);
   /* position: fixed;
   width: 100%; */
 }
 
-#navbarSupportedContent ul {
-  padding-left: 250px;
+#navbarSupportedContent > ul {
+  display: flex;
+  justify-content: flex-end;
 }
 
 #myphoto img {
@@ -73,7 +69,7 @@ span {
   color: rgb(255, 255, 255);
   font-weight: 500;
 }
-.navbar-toggler-icon{
+.navbar-toggler-icon {
   background-color: rgba(255, 255, 255, 0.344);
   border-radius: 2px;
 }
